# dimos

./: .envrc.r1pro  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AGENTS.md  AI_POLICY.md  CONTEXT.md  CONTRIBUTING.md  DEPLOY.md  HARDENING_PLAN.md  MANIFEST.in  README.md  default.env  demo_fix_spot_recording_tf.py  module_deployment_proposal.md  pr_responses.yaml  pyproject.toml  setup.py
.agents/: provision
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-merge.yml  ci.yml  pr-labels.yml  release-build-check.yml  release.yml
app/: .env.example  config.py  main.py  ratelimit.py  requirements.txt  test_tenant_isolation.py
app/models/: database.py  session.py
app/routers/: auth.py  sessions.py
app/services/: auth.py  cloudflare.py  sdp_utils.py
data/dimos_office_mesh/: dimos_office_mesh.cook.json
data/mujoco_sim/: g1_gear_wbc.xml
data/scene_packages/: README.md
dimos/: conftest.py  constants.py
dimos/agents/: test_usage.py  usage.py
dimos/codebase_checks/: test_get_logger.py
dimos/control/: README.md  clock.py  components.py  coordinator.py  hardware_interface.py  routing.py  task.py  test_clock.py  test_control.py  test_coordinator_commands.py  test_coordinator_routing.py  tick_loop.py
dimos/core/: core.py  external_python_bootstrap.py  external_python_module.py  external_python_runtime.py  global_config.py  module.py  native_module.py  run_registry.py  runtime_environment.py  stream.py  test_async_module_dispatch_serialization.py  test_async_module_handles.py  test_async_module_main.py  test_async_module_process_observable.py  test_async_module_rpc.py  test_async_module_rpc_sync_to_async.py  test_codec_transport.py  test_compressed_image_transport.py  test_core.py  test_external_python_bootstrap.py  test_external_python_end_to_end.py  test_external_python_runtime.py  test_global_config.py  test_native_module.py  test_runtime_environment.py  test_transport.py  test_utils.py  test_venv_module_demo.py  test_zenoh_transport.py  tf_module.py  transport.py  transport_factory.py
dimos/e2e_tests/: conftest.py  dim_sim_client.py  dimos_cli_call.py  lcm_spy.py  test_control_coordinator.py  test_dimsim_walk_forward.py  test_lcm_spy_helpers.py  test_pimsim_cross_wall.py  test_security_module.py
dimos/hardware/: test_adapter_registries.py
dimos/hardware/sensors/odin1/: Cargo.toml  README.md  blueprints.py  flake.nix  module.py
dimos/hardware/sensors/odin1/examples/: verify.rs
dimos/hardware/sensors/odin1/src/: convert.rs  main.rs
dimos/learning/: README.md  lerobot_policy.py  test_lerobot_policy.py
dimos/manipulation/: blueprints.py  design.md  manipulation_module.py  pick_and_place_module.py  scene_objects.py  sim_presets.py  test_manipulation_module.py  test_manipulation_unit.py  test_pick_and_place_unit.py  test_plan_execution_reservation.py  test_planning_factory.py  test_roboplan_world.py
dimos/mapping/: costmapper.py  mesh_camera.py  mesh_scene.py  relocalization.py  relocalize.py  usdz_to_mjcf.py
dimos/mapping/research/go2/autoresearch/lio-1/point_lio/: CMakeLists.txt  flake.nix
dimos/mapping/research/go2/autoresearch/lio-1/point_lio/include/: mcap_source.h
dimos/mapping/research/go2/autoresearch/lio-1/point_lio/src/: laserMapping.cpp  mcap_source.cpp
dimos/memory2/: architecture.md  db_tf.py  db_tf2.py  demo_bench_db_tf2.py  finder.py  health.py  module.py  puremodule.md  puremodule.py  replay.py  stream.py  test_db_tf.py  test_db_tf2_stress.py  test_health.py  test_puremodule.py  test_recorder_pose.py  test_replay.py  test_store.py  test_stream.py  test_visualizer.py  tf_recorder.py
dimos/navigation/cmu_nav/modules/pgo/cpp/: CMakeLists.txt  flake.nix  main.cpp  point_cloud_utils.hpp
dimos/navigation/jnav/components/loop_closure/gsc_pgo/rust/: Cargo.toml  build.rs  flake.nix
dimos/navigation/jnav/components/loop_closure/gsc_pgo/rust/shim/: gtsam_shim.cpp  gtsam_shim.h
dimos/navigation/jnav/components/loop_closure/gsc_pgo/rust/src/: gtsam.rs  lib.rs  main.rs  mat3.rs  msgs.rs  pointcloud.rs  scan_context.rs  simple_pgo.rs
dimos/navigation/jnav/components/loop_closure/gsc_pgo/rust/tests/: gtsam_graph.rs  msgs_python_wire.rs  pcl_normal_parity.rs  scan_context.rs  simple_pgo.rs
dimos/perception/: lidar_color_module.py  lidar_scan.py  object_scene_registration.py  object_scene_registration_spec.py  object_tracker.py  object_tracker_2d.py  scene_graph.py  sightings.py  spatial_vector_db.py  test_lidar_color_module.py  test_lidar_scan.py  test_object_scene_registration_temporal.py  (+6 more)
dimos/robot/descriptions/a750_description/: CMakeLists.txt  LICENSE  README.md  package.xml
dimos/robot/descriptions/a750_description/launch/: visualize_a750.launch.py
dimos/robot/descriptions/a750_description/meshes/a750_rev1/: base.stl  collision_base.stl  collision_finger.stl  collision_link1.stl  collision_link2.stl  collision_link3.stl  collision_link4.stl  collision_link5.stl  collision_link6.stl  finger.stl  link1.stl  link2.stl  link3.stl  link4.stl  link5.stl  link6.stl
dimos/robot/descriptions/a750_description/rviz/: arm.rviz
dimos/robot/descriptions/a750_description/urdf/: a750_rev1.urdf  a750_rev1_no_gripper.urdf
docs/: Makefile  api.rst  coding-agents.rst  conf.py  docs.json  index.rst  make.bat  spelling_wordlist.txt  usage.rst
examples/: go2_reference_governor_demo.py
hosted/: .gitignore  README.md
misc/: go2_cmd_cli.py
native/cpp/: .gitignore  CMakeLists.txt
native/cpp/include/dimos/: native.hpp
native/cpp/include/dimos/native/: config.hpp  lcm_codec.hpp  lcm_transport.hpp  log.hpp  module.hpp  transport.hpp
native/cpp/tests/: CMakeLists.txt  test_config.cpp  test_lcm_transport.cpp  test_log.cpp  test_main.cpp  test_module.cpp  test_transport.cpp
pgo/: __init__.py  detect_tags.py  make_rrd.py  post_process.py
scripts/: deploy.sh  publish_point_goal.py  run_memory_world.py
terraform/: cognito.tf  main.tf  route53.tf  ses.tf  terraform.tfvars.example  user_data.sh.tpl  variables.tf
web/: README.md  index.html
(+1807 files in other folders)
